tests/neg/i11963a.scala
// scalac: -Xfatal-warnings

open trait Foo // error
